fix widths to align content

--- a/src/modal/Modal.scss
+++ b/src/modal/Modal.scss
@@ -1,7 +1,7 @@
 .modal-content {
   position: absolute;
-  width: 96.5%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 100;
   top: 0;
   left: 0;
